// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifGrid/> tests should render properly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Tests
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`<GifGrid/> tests should show items when images load with useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Tests
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Text"
      url="https://test.com"
    />
  </div>
</Fragment>
`;
